ajustes minimos e imports